--- a/driving.ipynb
+++ b/driving.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -183,12 +183,15 @@
       " 'C:\\\\Users\\\\shahv\\\\DATA_SELF_DRIVING\\\\TRACK\\\\IMG\\\\center_2023_03_01_09_57_17_225.jpg'\n",
       " 'C:\\\\Users\\\\shahv\\\\DATA_SELF_DRIVING\\\\TRACK\\\\IMG\\\\center_2023_03_01_09_57_18_339.jpg'\n",
       " 'C:\\\\Users\\\\shahv\\\\DATA_SELF_DRIVING\\\\TRACK\\\\IMG\\\\center_2023_03_01_09_57_20_936.jpg']\n",
-      "(1501,)\n"
+      "(1501,)\n",
+      "1200\n",
+      "301\n"
      ]
     }
    ],
    "source": [
     "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
     "def  load(path_2):\n",
     "    img_path = []\n",
     "    steering = []\n",
@@ -205,7 +208,10 @@
     "print(img_path)        \n",
     "print(steering.shape)       \n",
     "\n",
-    "\n"
+    "\n",
+    "x_train,x_val,y_train,y_val = train_test_split(img_path, steering, test_size  = 0.2,random_state = 6)\n",
+    "print(len(x_train))\n",
+    "print(len(x_val))\n"
    ]
   },
   {
